# tomcat-tmm

./: .dockerignore  .gitignore  .project  CMakeLists.txt  Dockerfile  Dockerfile (1)  Makefile  Makefile-asist  Makefile-asist-offline  README.md  docker-compose.sim2.yml  docker-compose.yml  entrypoint.sh
src/: CMakeLists.txt  Edge.hpp  Node.hpp  asist_study-2_2021.06.cpp  asist_study-2_2021.06_m7_conversion.cpp  convert_messages.cpp  data_generation.cpp  evaluation.cpp  evidence_merge.cpp  gen_graph.h  marker_event_based_conversion.cpp  message_conversion.cpp  model_visualization.cpp  model_visulization.cpp  multithread_check.cpp  online_estimation.cpp  random_gen.cpp  run_experiments_v1.cpp  run_experiments_v2.cpp  run_online_tomcat.cpp  training.cpp
src/asist/: ASISTMessageConverter.cpp  ASISTMessageConverter.h  ASISTReporter.cpp  ASISTReporter.h  run_experiments_fall20.cpp
src/asist/study1/: ASISTSinglePlayerMessageConverter.cpp  ASISTSinglePlayerMessageConverter.h
src/asist/study2/: ASISTMultiPlayerMessageConverter.cpp  ASISTMultiPlayerMessageConverter.h  ASISTStudy2EstimateReporter.cpp  ASISTStudy2EstimateReporter.h  FinalTeamScoreEstimator.cpp  FinalTeamScoreEstimator.h  IndependentMapVersionAssignmentEstimator.cpp  MapVersionAssignmentEstimator.cpp  NextAreaOnNearbyMarkerEstimator.cpp  NextAreaOnNearbyMarkerEstimator.h
src/asist/study3/: ASISTReporter.cpp  ASISTReporter.h  ASISTStudy3InterventionEstimator.cpp  ASISTStudy3InterventionEstimator.h  ASISTStudy3InterventionLogger.cpp  ASISTStudy3InterventionLogger.h  ASISTStudy3InterventionModel.cpp  ASISTStudy3InterventionModel.h  ASISTStudy3InterventionReporter.cpp  ASISTStudy3InterventionReporter.h  ASISTStudy3MessageConverter.cpp  ASISTStudy3MessageConverter.h  InterventionEstimator.cpp  InterventionEstimator.h  TeamQualityDecayEstimator.cpp  TeamQualityDecayEstimator.h
src/converter/: ASISTMessageConverter.cpp  ASISTMessageConverter.h  ASISTMultiPlayerMessageConverter.cpp  ASISTMultiPlayerMessageConverter.h  ASISTSinglePlayerMessageConverter.cpp  ASISTSinglePlayerMessageConverter.h  ASISTStudy3MessageConverter.cpp  ASISTStudy3MessageConverter.h  MessageConverter.cpp  MessageConverter.h  TA3MessageConverter.cpp  TA3MessageConverter.h
src/distribution/: Categorical.cpp  Categorical.h  Continuous.cpp  Continuous.h  Dirichlet.cpp  Dirichlet.h  Distribution.cpp  Distribution.h  Empirical.cpp  Empirical.h  Gamma.cpp  Gamma.h  Gaussian.cpp  Gaussian.h  Geometric.cpp  Geometric.h  Histogram.cpp  Histogram.h  InverseGamma.cpp  InverseGamma.h  Poisson.cpp  Poisson.h
src/experiments/: Experimentation.cpp  Experimentation.h  Tomcat.cpp  Tomcat.h  TomcatTA3.cpp  TomcatTA3.h  TomcatTA3V2.cpp  TomcatTA3V2.h
src/multithread/: FunctionWrapper.h  ThreadPool.cpp  ThreadPool.h  ThreadSafeQueue.h
src/pgm/: ConstantNode.cpp  ConstantNode.h  DynamicBayesNet.cpp  DynamicBayesNet.h  EvidenceSet.cpp  EvidenceSet.h  JSONModel.cpp  JSONModel.h  JSONModelParser.cpp  JSONModelParser.h  Node.cpp  Node.h  NodeMetadata.cpp  NodeMetadata.h  NumericNode.cpp  NumericNode.h  RandomVariableNode.cpp  RandomVariableNode.h  TimerNode.cpp  TimerNode.h
src/pgm/cpd/: CPD.cpp  CPD.h  CategoricalCPD.cpp  CategoricalCPD.h  DirichletCPD.cpp  DirichletCPD.h  EmpiricalCPD.cpp  EmpiricalCPD.h  GammaCPD.cpp  GammaCPD.h  GaussianCPD.cpp  GaussianCPD.h  GeometricCPD.cpp  GeometricCPD.h  HistogramCPD.cpp  HistogramCPD.h  InverseGammaCPD.cpp  InverseGammaCPD.h  PoissonCPD.cpp  PoissonCPD.h
src/pgm/inference/: FactorGraph.cpp  FactorGraph.h  FactorNode.cpp  FactorNode.h  MarginalizationFactorNode.cpp  MarginalizationFactorNode.h  MessageNode.cpp  MessageNode.h  ParticleFilter.cpp  ParticleFilter.h  SegmentExpansionFactorNode.cpp  SegmentExpansionFactorNode.h  SegmentMarginalizationFactorNode.cpp  SegmentMarginalizationFactorNode.h  SegmentNode.cpp  SegmentNode.h  SegmentTransitionFactorNode.cpp  SegmentTransitionFactorNode.h  VariableNode.cpp  VariableNode.h
src/pipeline/: DBNSaver.cpp  DBNSaver.h  DataSplitter.cpp  DataSplitter.h  KFold.cpp  KFold.h  Model.cpp  Model.h  ModelSaver.cpp  ModelSaver.h  Pipeline.cpp  Pipeline.h
src/pipeline/estimation/: ASISTAgent.cpp  ASISTAgent.h  ASISTEstimateReporter.cpp  ASISTEstimateReporter.h  ASISTStudy2Agent.cpp  ASISTStudy2Agent.h  ASISTStudy2EstimateReporter.cpp  ASISTStudy2EstimateReporter.h  Agent.cpp  Agent.h  CompoundSamplerEstimator.cpp  CompoundSamplerEstimator.h  EstimateReporter.cpp  EstimateReporter.h  EstimationProcess.cpp  EstimationProcess.h  Estimator.cpp  Estimator.h  (+16 more)
src/reporter/: ASISTStudy2EstimateReporter.cpp  ASISTStudy2EstimateReporter.h  ASISTStudy3InterventionReporter.cpp  ASISTStudy3InterventionReporter.h  EstimateReporter.cpp  EstimateReporter.h
src/sampling/: AncestralSampler.cpp  AncestralSampler.h  GibbsSampler.cpp  GibbsSampler.h  Sampler.cpp  Sampler.h
src/utils/: Definitions.h  EigenExtensions.cpp  EigenExtensions.h  FileHandler.cpp  JSONChecker.cpp  JSONChecker.h  JSONModel.cpp  JSONModel.h  Mosquitto.cpp  Mosquitto.h  Multithreading.h  OnlineConfig.h  SynchronizedQueue.h  Tensor3.cpp  Tensor3.h  ThreadSafeQueue.h  Types.h
test/: CMakeLists.txt  gen_graph.cpp  gen_graph.h  mock_models.h  read_json.cpp  read_json.h  run_tests.cpp  test_bgl.cpp  test_graph.cpp  test_helpers.h
test/data/: portal_easy.json  portal_hard.json  portal_medium.json  room_easy.json  room_hard.json  room_medium.json  saturn_portal.json  saturn_room.json  victim_easy.json  victim_hard.json  victim_medium.json
test/models/: dbn.json  dbn1.json  dbn2.json  dbn3.json  dbn4.json  dbn5.json  dbn6.json  dbn7.json  dbn7_1.json  dbn_no_movable.json  deterministic_dbn.json  deterministic_semi_markov_dbn.json  edhmm_exact.json  extended_hmm.json  hmm.json  semi_markov_dbn.json  semi_markov_dbn1.json  semi_markov_dbn1_1.json  semi_markov_dbn2.json  semi_markov_dbn3.json  semi_markov_dbn3_1.json  semi_markov_dbn4.json  semi_markov_dbn5.json  semi_markov_dbn6.json  semi_markov_extended_hmm.json  semi_markov_hmm.json  trainable_dbn.json  trainable_dbn7.json  trainable_dbn7_1.json  trainable_semi_markov_dbn.json
(+77 files in other folders)
